methods.returning.MethodsReturning.scala.code
var vuBiscuit = false
def haveBaggle():Boolean = {
  for (j <- 1 to 6){
  	for (i <- 1 to 6){
    	avance()
    	if (estSurBiscuit()==true){
      	vuBiscuit=true
    }
      recule(6)
      return(vuBiscuit)
      }
    }
}


